Bug fixing and settings!
- Made the settings functional. Limited options for now (Text contrast and Background opacity
- Fixed the tab overlapping issue, where 2 tabs with the same name and IDs are created.

--- a/style.sass
+++ b/style.sass
@@ -3,16 +3,28 @@
     --test-border: 1px solid black
 
     --text-contrast: 0.8
-    --text-color-UI: rgba(0, 0, 0, 0.8)
-    --text-color-notepad: rgba(0, 0, 0, var(--text-contrast))
     
     --background-opacity: 0.06
 
+    --background-color: var(--light-background-color)
 
-*
+    --text-color-UI: var(--light-text-color-UI)
+    --text-color-notepad: var(--light-text-color-notepad)
+
+    // light mode
+    --light-background-color: rgb(255, 255, 255, var(--background-opacity))
+    --light-text-color-UI: rgba(0, 0, 0, 0.8)
+    --light-text-color-notepad: rgba(0, 0, 0, var(--text-contrast))
+
+    // dark mode
+    --dark-background-color: rgb(0, 0, 0, var(--background-opacity))
+    --dark-text-color-UI: rgba(255, 255, 255, 0.8)
+    --dark-text-color-notepad: rgba(255, 255, 255, var(--text-contrast))
+
     color: var(--text-color-UI)
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 
+* 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
 body, html 
     color: var(--text-color-UI)
@@ -67,7 +79,7 @@ body, html
     height: 60px
     font-size: 24px
 
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.089)
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.09)
 
     display: flex
     align-items: center
@@ -249,7 +261,7 @@ body, html
 
 textarea 
     /* background: #3F2E3E */
-    background-color: rgba(255, 255, 255, 0.06)
+    background-color: var(--background-color)
     backdrop-filter: blur(50px) saturate(200%)
     /* background: none */
     color: var(--text-color-notepad)
@@ -295,7 +307,7 @@ textarea
     z-index: 3
     
     background-image: var(--background-image)
-
+    filter: saturate(150%)
 
     box-shadow: #0000002c 10px 11px 20px
 
@@ -324,7 +336,7 @@ textarea
         border-radius: 5px
         
 .settings
-    display:flex
+    display: flex
     flex-direction: column
     flex-grow: 4
     padding: 0 18px 18px 18px
@@ -341,10 +353,13 @@ textarea
         align-items: center
         height: fit-content
         padding: 5px
+        & span
+            color: var(--text-color-notepad)
 
     & #text-contrast
         margin-left: 10px
         width: fit-content
+        
 
 
 
@@ -362,7 +377,7 @@ textarea
     backdrop-filter: blur(2px)
     background-color: rgba(0, 0, 0, 0.3)
     &:active
-        display:block
+        display: block
 
 
 
